# netbox-plugin-device-library

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml
.compose/config/: plugins.py
.github/workflows/: publish.yaml
netbox_plugin_device_library/: __init__.py  forms.py  jobs.py  models.py  navigation.py  template_content.py  urls.py  views.py
netbox_plugin_device_library/migrations/: 0001_initial.py  0002_imported_library_objects.py  0003_unique_import_urls.py  0004_images.py  0005_unique_image_uri.py  __init__.py
netbox_plugin_device_library/templates/netbox_plugin_device_library/: settings.html
netbox_plugin_device_library/templates/netbox_plugin_device_library/partials/: add_from_library_button.html  library_search_modal.html  library_search_results.html
plugin/: __init__.py
