[project]
name = "netbox-plugin-device-library"
version = "0.1.0"
description = "Manage device-library sources from NetBox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "netbox>=4.5,<4.6",
]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_plugin_device_library*"]

[tool.setuptools.package-data]
netbox_plugin_device_library = [
    "templates/**",
]
